# Gary2025

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compile.sh  execution  send.sh  trison_script.sh
develop/: .bash_history
execution/: botball_user_program
include/: library.h  ports.h  positions.h  servos.h  tasks.h  threads.h  translation.h  variables.h
scripts/: compile.ps1  compile.sh  compileValues.sh  compile_and_upload.sh  compile_upload.ps1  compile_upload.sh  compile_upload_run.ps1  compile_upload_run.sh  upload.sh  values.txt
src/: auto.c  main.c  main2.c  manual.c  nards.c  ports.c  positions.c  second.c  servos.c  start.c  tasks.c  threads.c  translation.c  variables.c
